fix: 887 - rewrite paddings with gaps

--- a/src/widgets/partnered/ui/partnered.module.scss
+++ b/src/widgets/partnered/ui/partnered.module.scss
@@ -1,6 +1,7 @@
 .partnered-content {
   display: flex;
   flex-direction: column;
+  gap: 16px;
 
   .partners {
     display: flex;
@@ -11,7 +12,6 @@
 
     width: 100%;
     max-width: 500px;
-    padding: 16px;
 
     .partner-logo-container {
       display: flex;
@@ -21,13 +21,15 @@
 
       @include media-mobile {
         flex-basis: 50%;
-        padding: 24px 0;
       }
     }
 
     @include media-tablet {
       row-gap: 16px;
-      padding: 16px 0;
+    }
+
+    @include media-mobile {
+      row-gap: 48px;
     }
   }
 }
